@@ -190,6 +190,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Add accesskey 's' and tooltip to 'upload file' button at Special:Upload
 * Introduced 'SkinAfterBottomScripts' hook; see docs/hooks.txt for
   more information
+* (bug 10347) Give notice when a page is viewed that is protected. Does not 
+  show for cascade protection however.
 
 == Bugfixes since 1.10 ==
 
